--- a/app/src/main/res/values-af-rZA/strings.xml
+++ b/app/src/main/res/values-af-rZA/strings.xml
@@ -134,7 +134,7 @@
     <string name="grid_view">Grid View</string>
     <!-- Sort utilities by size -->
     <string name="size">Size</string>
-    <!-- Group audio utilities list by album names  -->
+    <!-- Group audio utilities list by album names -->
     <string name="album">Album</string>
     <!-- Group audio utilities list by artist name -->
     <string name="artist">Artist</string>
@@ -185,9 +185,21 @@
     <!-- Generic message for any operation not supported -->
     <string name="unsupported_operation">Unsupported Operation</string>
     <!-- Grant storage permission more info -->
-    <string name="grant_all_files_permission"><html><body>Since Android 11, Google requests File Managers to request user permission for managing all files on the device. Details <a href="https://developer.android.com/training/data-storage/manage-all-files" target="_blank">here</a>.
-        \n\nAmaze File Utilities needs this permission too. After pressing &quot;Grant&quot;here, please select <b>Allow access to manage all files</b> option on the next screen.
-        \n\n<font color="#ff6347"><i>Canceling this dialog will exit the app.</i></font></body></html></string>
+    <string name="grant_all_files_permission">
+        <html>
+            <body>
+                Since Android 11, Google requests File Managers to request user permission for managing all files on the device. Details
+                <a href="https://developer.android.com/training/data-storage/manage-all-files" target="_blank">here</a>.
+                \n\nAmaze File Utilities needs this permission too. After pressing &quot;Grant&quot;here, please select
+                <b>Allow access to manage all files</b>
+                option on the next screen.
+                \n\n
+                <font color="#ff6347">
+                    <i>Canceling this dialog will exit the app.</i>
+                </font>
+            </body>
+        </html>
+    </string>
     <!-- Pdf activity copy page content title -->
     <string name="copy_page">Copy page</string>
     <!-- Pdf activity view bookmarks -->
@@ -465,7 +477,14 @@
     <!-- Download subtitles in video player -->
     <string name="download_subtitles">Download subtitles</string>
     <!-- Download subtitles info in video player -->
-    <string name="download_subtitles_info">Enter keywords and select your language to search subtitles from <html><body><font color="#FF4287f5">opensubtitles.org</font></body></html></string>
+    <string name="download_subtitles_info">
+        Enter keywords and select your language to search subtitles from
+        <html>
+            <body>
+                <font color="#FF4287f5">opensubtitles.org</font>
+            </body>
+        </html>
+    </string>
     <!-- Download amaze file manager when press on internal storage in main screen -->
     <string name="amaze_fm_redirect">You\'re being redirected to Amaze File Manager. It\'s our open source offering that has all features a modern file manager has completely free of cost with over 2M downloads and 4.3 rating on Play Store.</string>
     <!-- Download button in dialog prompt -->
@@ -511,10 +530,10 @@
     <string name="no_item_selected">No item selected</string>
     <!-- Updated analysis when user press on thumbs down in case he didn't like the analysis -->
     <string name="analysis_updated">Updated analysis</string>
-    <!-- Failed to share pdf/ video/audio files  -->
+    <!-- Failed to share pdf/ video/audio files -->
     <string name="failed_to_share">Failed to share files</string>
     <!-- Transfer tab connected hint -->
-    <string name="connected_send_receive_hint">Connected… before you start sending, 
+    <string name="connected_send_receive_hint">Connected… before you start sending,
         make sure to enable receiver on the other device</string>
     <!-- Transfer tab receiving files -->
     <string name="receiving">Receiving…</string>
