--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -134,7 +134,7 @@
     <string name="grid_view">Exibição em grade</string>
     <!-- Sort utilities by size -->
     <string name="size">Tamanho</string>
-    <!-- Group audio utilities list by album names  -->
+    <!-- Group audio utilities list by album names -->
     <string name="album">Álbum</string>
     <!-- Group audio utilities list by artist name -->
     <string name="artist">Artista</string>
@@ -185,7 +185,20 @@
     <!-- Generic message for any operation not supported -->
     <string name="unsupported_operation">Operação não suportada</string>
     <!-- Grant storage permission more info -->
-    <string name="grant_all_files_permission"><html><body>Desde o Android 11, o Google solicita que os gerenciadores de arquivos solicitem permissão do usuário para gerenciar todos os arquivos no dispositivo. Detalhes<a href="https://developer.android.com/training/data-storage/manage-all-files" target="_blank">aqui</a>. \n\nAmaze File Utilities também precisa dessa permissão. Depois de pressionar &quot;Conceder&quot; aqui, selecione<b>Permitir acesso para gerenciar todos os arquivos</b>opção na próxima tela. \n\n<font color="#ff6347"><i>Cancelar esta caixa de diálogo encerrará o aplicativo.</i></font></body></html></string>
+    <string name="grant_all_files_permission">
+        <html>
+            <body>
+                Desde o Android 11, o Google solicita que os gerenciadores de arquivos solicitem permissão do usuário para gerenciar todos os arquivos no dispositivo. Detalhes
+                <a href="https://developer.android.com/training/data-storage/manage-all-files" target="_blank">aqui</a>.
+                \n\nAmaze File Utilities também precisa dessa permissão. Depois de pressionar &quot;Conceder&quot; aqui, selecione
+                <b>Permitir acesso para gerenciar todos os arquivos</b>
+                opção na próxima tela. \n\n
+                <font color="#ff6347">
+                    <i>Cancelar esta caixa de diálogo encerrará o aplicativo.</i>
+                </font>
+            </body>
+        </html>
+    </string>
     <!-- Pdf activity copy page content title -->
     <string name="copy_page">Copiar página</string>
     <!-- Pdf activity view bookmarks -->
@@ -461,7 +474,14 @@
     <!-- Download subtitles in video player -->
     <string name="download_subtitles">Baixar legendas</string>
     <!-- Download subtitles info in video player -->
-    <string name="download_subtitles_info">Digite palavras-chave e selecione seu idioma para pesquisar legendas<html><body><font color="#FF4287f5">opensubtitles.org</font></body></html></string>
+    <string name="download_subtitles_info">
+        Digite palavras-chave e selecione seu idioma para pesquisar legendas
+        <html>
+            <body>
+                <font color="#FF4287f5">opensubtitles.org</font>
+            </body>
+        </html>
+    </string>
     <!-- Download amaze file manager when press on internal storage in main screen -->
     <string name="amaze_fm_redirect">Você está sendo redirecionado para Amaze File Manager. É a nossa oferta de código aberto que possui todos os recursos de um gerenciador de arquivos moderno totalmente gratuito, com mais de 2 milhões de downloads e classificação de 4,3 na Play Store.</string>
     <!-- Download button in dialog prompt -->
@@ -507,7 +527,7 @@
     <string name="no_item_selected">Nenhum item selecionado</string>
     <!-- Updated analysis when user press on thumbs down in case he didn't like the analysis -->
     <string name="analysis_updated">Análise atualizada</string>
-    <!-- Failed to share pdf/ video/audio files  -->
+    <!-- Failed to share pdf/ video/audio files -->
     <string name="failed_to_share">Falha ao compartilhar arquivos</string>
     <!-- Transfer tab connected hint -->
     <string name="connected_send_receive_hint">Conectado… antes de começar a enviar, certifique-se de habilitar o receptor no outro dispositivo</string>
